backend handles duplicate email / username frontend displays error message once backend updates URL

--- a/home.html
+++ b/home.html
@@ -259,7 +259,7 @@ async function addFact(){
 async function callChatGPT(bookTitle, bookChapter, questionCount) {
 
     // set information for api call
-            const apiKey = '';
+            const apiKey = 'sk-proj-';
             const apiUrl = 'https://api.openai.com/v1/chat/completions';
 
             const headers = {
