Styling for signup completed // validation needed

--- a/signIn.html
+++ b/signIn.html
@@ -22,7 +22,7 @@
         .loginForm{
             border-radius: 10px;
             background-color: white;
-            padding: 100px;
+            padding: 120px;
             width: 1000px;
             margin: 50px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -31,7 +31,7 @@
             margin-top: 15px;
         }
         input{
-            width: 200px;
+            width: 250px;
             padding: 3px;
             border: 1px solid #ccc;
             border-radius: 5px;
@@ -45,12 +45,20 @@
         }
         #header{
           color: #66afe9;
+          font-family: "calibri";
         }
         .information{
             margin-right: 15px;
         }
         p{
             margin: 3px;
+        }
+        #description-text{
+            font-size: 16px;
+        }
+        input,label{
+            font-size: 18px;
+
         }
     </style>
 </head>
@@ -59,7 +67,7 @@
         <div class = "information">
         <h1>Log Into <span id ="header"> Chapter Checkup</span></h1>
         <br>
-        <p>Welcome to Chapter Checkup, your ultimate destination for immersive and interactive book chapter quizzes. 
+        <p id = "description-text">Welcome to Chapter Checkup, your ultimate destination for immersive and interactive book chapter quizzes. 
            Whether you're a passionate reader looking to test your knowledge or a student preparing for exams,
             Chapter Checkup offers a dynamic platform designed to enhance your understanding and retention of book chapters.</p>
     </div>
