--- a/home.html
+++ b/home.html
@@ -132,8 +132,8 @@
             <div id ="user-options">
                 <h1 id ="header">Chapter Checkup</h1>
                 <div id ="user-options-links">
-                <a class="nav-link" href="/home.html" >Home</a>
-                <a class="nav-link" href="/signIn.html" >Sign In </a>
+                <a class="nav-link" href="/home" >Home</a>
+                <a class="nav-link" href="/" >Sign In </a>
             </div>
             </div>
         </nav>
@@ -188,6 +188,9 @@
 
  </body>
 <script>
+
+//radio buttons allow for muliple choice
+//handle case were user does not select an answer
 
 //grab DOM elements
 const bookTitle = document.getElementById('bookInputForm');
@@ -273,7 +276,7 @@ async function callChatGPT(bookTitle, bookChapter, questionCount) {
                 // prompt to get consistent response 
                 messages: [
                     { role: 'system', content: 'You are a helpful assistant.' },
-                    { role: 'user', content: `Give me a quiz for ${bookTitle} chapter: ${bookChapter} multiple choice with ${questionCount} questions with the answer aswell, 
+                    { role: 'user', content: `Give me a quiz for ${bookTitle} chapter: ${bookChapter} multiple choice with ${questionCount} questions with the answer as well, 
                     do not include any additional information only the question and multiple choice. 
                     For example do not inlude "Sure here are ..." also do not add a newline until the question is written. 
                     Follow this format: 1. What is one detail that describes the Valley of Ashes?
@@ -325,6 +328,7 @@ function createAndShowQuiz(bookChapters) {
     let questionList = null;
     let questions = [];
     let answers = [];
+    let questionNumber = 1;
     const form = document.createElement("form");
     
     bookChapters.forEach((element, index) => {
@@ -345,14 +349,16 @@ function createAndShowQuiz(bookChapters) {
                 // save it in array
                 if (counter > 4) {
                     answers.push(element);
+                    console.log(questionNumber);
                     console.log(element);
                     counter = 0;
-                } else { 
+                    questionNumber++;
+                } else if(counter < 5) { 
                     // Append choices as radio buttons to unordered list
                     const listItem = document.createElement("li");
                     const radioInput = document.createElement("input");
                     radioInput.type = "radio";
-                    radioInput.name = `question${Math.floor(index / 6)}`; // Ensure each question has a unique name
+                    radioInput.name = `question${questionNumber}`; // Ensure each question has a unique name
                     radioInput.value = element;
                     const label = document.createElement("label");
                     label.appendChild(radioInput);
@@ -360,6 +366,7 @@ function createAndShowQuiz(bookChapters) {
                     listItem.appendChild(label);
                     questionList.appendChild(listItem);
                     counter++;
+                    
                 }
             }
         }
@@ -391,7 +398,7 @@ async function grabRandomFact(){
                 try{
                     const response = await fetch(apiURL,{
                         method: 'GET',
-                        headers: { 'X-Api-Key': ''},
+                        headers: { 'X-Api-Key': '=='},
                         contentType: 'application/json',
                     });
 
