--- a/signUp.html
+++ b/signUp.html
@@ -54,10 +54,10 @@
             border-color: #66afe9;
             box-shadow: 0 0 5px rgba(102, 175, 233, 0.5);
         }
-        #password-requirement-container{
-            border: 1px solid #ccc; 
+        .password-requirement-container{
             padding: 10px; 
-            max-width: 300px;
+            font-size: 18px;
+
         }
         li p {
             display: inline;
@@ -90,6 +90,10 @@
         #header-color{
             display: inline;
             color: #66afe9;
+        }
+        input,label{
+            font-size: 18px;
+
         }
     </style>
 </head>
