--- a/HTML/profile.html
+++ b/HTML/profile.html
@@ -32,6 +32,8 @@
         <tbody id="quizResults">
         </tbody>
     </table>
+    <div id="pagination"></div>
+
 </div>
     <script src = "/static/JS/profile.js"></script>
 </body>
